--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Biomechanical Model"]
 	path = Biomechanical Model
 	url = https://github.com/N-Pulse/BMI-SOFT-Biomechanical_Model
+[submodule "Gesture Recognition"]
+	path = Gesture Recognition
+	url = https://github.com/N-Pulse/BMI-SOFT-CV_Gesture_Recognition.git
